apps/next/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 47.4% 11.2%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 47.4% 11.2%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 100% 50%;
    --destructive-foreground: 210 40% 98%;

    --selection: 233, 12%, 39%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 4%;
    --foreground: 213 31% 91%;

    --muted: 223 0% 11%;
    --muted-foreground: 215.4 0% 56.9%;

    --popover: 224 0% 4%;
    --popover-foreground: 215 0% 65.1%;

    --card: 0 100% 0%;
    --card-foreground: 213 0% 91%;

    --border: 216 0% 17%;
    --input: 216 0% 17%;

    --primary: 210 0% 98%;
    --primary-foreground: 222.2 0% 1.2%;

    --secondary: 222.2 0% 11.2%;
    --secondary-foreground: 210 0% 98%;

    --accent: 216 0% 17%;
    --accent-foreground: 210 0% 98%;

    --destructive: 0 63% 31%;
    --destructive-foreground: 210 40% 98%;

    --selection: 233, 12%, 39%;

    --ring: 216 0% 17%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
    min-width: 0;
  }

  body {
    @apply bg-background text-foreground;
    font-feature-settings:
      'rlig' 1,
      'calt' 1;
    background-image: url('/noise.png');
    background-repeat: repeat;
    background-blend-mode: overlay;
    background-size: 10%;
  }

  /* width */
  ::-webkit-scrollbar {
    @apply h-1 w-1;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    @apply rounded bg-muted;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    @apply rounded bg-muted-foreground;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }

  pre > code {
    @apply grid py-6;
    counter-reset: line;
  }

  :not(pre) > code {
    @apply rounded-lg border-2 bg-muted px-1 text-foreground/100;
  }

  code {
    counter-reset: line;
  }

  code[data-line-numbers] > [data-line]::before {
    counter-increment: line;
    content: counter(line);
    position: sticky;

    /* Other styling */
    display: inline-block;
    width: 1rem;
    margin-right: 2rem;
    text-align: right;
    color: gray;
  }

  code[data-line-numbers-max-digits='2'] > [data-line]::before {
    @apply w-[2rem];
  }

  code[data-line-numbers-max-digits='3'] > [data-line]::before {
    @apply w-[3rem];
  }

  [data-line] {
    @apply border-l-2 border-l-2 border-l-transparent border-l-transparent px-6;
  }

  [data-highlighted-line] {
    background: rgba(200, 200, 255, 0.1);
    @apply border-l-blue-400;
  }

  [data-highlighted-chars] {
    @apply rounded bg-zinc-600/50;
    box-shadow: 0 0 0 4px rgb(82 82 91 / 0.5);
  }

  [data-chars-id] {
    @apply border-b-2 p-1 shadow-none;
  }

  [data-chars-id] span {
    @apply !text-inherit;
  }
}

